# HODL

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  README.md  pdm.toml  pyproject.toml  update.sh
.github/workflows/: test.yml
ci/: gitlab-ci.toml  pip.conf
data/: tigr.csv
hodl/: __init__.py  async_proxy.py  base_price_mixin.py  broker_proxy.py  exception_tools.py  factor_mixin.py  manager.py  plan_calc.py  quote.py  quote_mixin.py  risk_control.py  sleep_mixin.py  storage.py  store.py  store_base.py  store_hodl.py  store_hodl_base.py  store_isolated.py  thread_mixin.py  trade_mixin.py  ui_mixin.py  unit_test.py
hodl/bot/: __init__.py  alert_bot.py  base.py  conversation_bot.py
hodl/bot/bot_conversation/: base_price_day_low.py  base_price_last_buy.py  delete_state.py  enable_position.py  give_up_price.py  lock_position.py  monthly_earning.py  prudent.py  report.py  revive_store.py  settings.py  temp_base_price.py  today_orders.py
hodl/bot_conversation/: delete_state.py  max_shares.py  monthly_earning.py  report.py  settings.py  shoot_off.py
hodl/broker/: __init__.py  alpaca.py  base.py  binance.py  broker_proxy.py  citics.py  futu.py  http_trading.py  interactive_brokers.py  longport.py  myquant.py  okx.py  tiger.py
hodl/cli/: __init__.py  cash dividend.py  demo.py  earning_link.py  fix_tools.py  order_link.py  refresh_csv.py  refresh_earnings.py  shoot_off.py  trade_bot.py  tui.py
hodl/cli/fix_screens/: earning_link.py  order_link.py  store_config_detail.py
hodl/cli/threads/: html_writer.py  json_writer.py  market_status.py  p2p.py  ps_util.py  telegram.py
hodl/cli/threads/bot_conversation/: __init__.py  base_price_day_low.py  base_price_last_buy.py  delete_state.py  enable_position.py  give_up_price.py  kill.py  lock_position.py  max_shares.py  monthly_earning.py  report.py  revive_store.py  settings.py  temp_base_price.py  today_orders.py
hodl/cli/tui_panels/: store_panels.py
hodl/css/: fix_tools.css  tui.css
hodl/plugin/broker/: alpaca.py  citics.py  futu.py  interactive_brokers.py  longport.py  myquant.py  okx.py  tiger.py
hodl/plugin/conversation/: delete_state.py  give_up_price.py  kill_store.py  revive_store.py  temp_base_price.py  today_orders.py
hodl/proxy/: __init__.py  asyncio_proxy.py  broker_proxy.py  currency_proxy.py  market_status_proxy.py
hodl/resources/: ci.toml  demo.toml  demo_factors.toml  demo_tumble_protect.toml  pip.conf
hodl/resources/css/: demo.css  fix_tools.css  tui.css
hodl/resources/demo/: factors.md  firstbuy.md  firstsell.md  store.md  tumble_protect.md  tumble_protect_effect.md  ui.md  welcome.md
hodl/resources/templates/: api_status.html  currency_status.html  market_status.html  order_page.html  script_tag.html  style_tag.html  value_panel.html
hodl/simulation/: fake_quote.py  main.py
hodl/state/: __init__.py  state_dict.py  state_fire.py  state_market.py  state_order.py  state_order_props.py  state_plan.py  store_state.py
hodl/ta/: __init__.py  ta_tools.py
hodl/templates/: api_status.html  earning_page.html  index.html  market_status.html  order_page.html  script_tag.html  status.html  status_page.html  store.html  store_page.html  thread_mixin.html  value_panel.html
hodl/tools/: __init__.py  broker_meta.py  currency_config.py  dict_wrapper.py  factor_config.py  format.py  hedge_config.py  leaky_bucket.py  locate.py  locks.py  logger.py  p2p_config.py  store_config.py  store_state_base.py  time.py  tui_config.py  variable.py
tests/: test_01_basic.py  test_01_config.py  test_02_store.py  test_03_lsod.py  test_04_risk_control.py  test_05_base_price.py  test_06_submit_order.py  test_07_factor_spread_mktOrder.py  test_08_chinese_share.py  test_09_rework.py  test_10_tumble_protect.py  test_11_sleep_mode.py  test_12_mutilstage_rocket.py  test_13_currency.py  test_14_margin.py  test_15_broker_proxy.py  test_16_odd_order.py  test_full_data.py
tests/ci/: config.toml
