[project]
name = "hodl"
dynamic = ["version"]
description = ""
authors = [
    {name = "xdusongwei", email = "github@songwei.name"},
]
dependencies = [
    "pycryptodome>=3.19; sys_platform == 'win32'",
    "PySocks>=1.7.1",
    "concurrent-log-handler>=0.9.20",
    "json-log-formatter==0.5.1",
    "httpx>=0.22.0",
    "h2>=4.1.0",
    "requests>=2.27.1",
    "expiringdict>=1.2.1",
    "binance-connector>=1.13.0",
    "tigeropen>=2.3.1",
    "currency-symbols>=2.0.2",
    "Jinja2>=3.1.2",
    "base58>=2.1.1",
    "xxhash>=3.0.0",
    "humanize>=4.3.0",
    "psutil>=5.9.3",
    "orjson>=3.8.3",
    "exchange-calendars>=4.2.4",
    "futu-api>=7.1.3308",
    "ib-insync>=0.9.85",
    "tomlkit>=0.12.1",
    "python-telegram-bot[socks]>=21.1.1",
    "filelock>=3.15.3",
    "alpaca-py>=0.31.0",
]

requires-python = ">=3.12"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/xdusongwei/HODL"

[project.optional-dependencies]
test = [
    "coverage>=7.2.7",
    "pytest>=7.4.0",
]
tui = [
    "textual==0.28.1",
    "pywin32>=306; sys_platform == 'win32'",
    "win10toast>=0.9; sys_platform == 'win32'",
]
longport = [
    "longport>=1.0.5",
]

[tool]
[tool.pdm]
version = { source = "file", path = "hodl/__version__.py" }

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
bot = {cmd = "python -m hodl.cli.trade_bot"}
tui = {cmd = "python -m hodl.cli.tui"}
test = {cmd = "coverage run --source=./hodl -m pytest --disable-pytest-warnings tests"}
html = {cmd = "coverage html"}
report = {cmd = "coverage report"}
xml = {cmd = "coverage xml"}
fixtools = {cmd = "python -m hodl.cli.fix_tools"}
