[project]
name = "hodl"
dynamic = ["version"]
description = ""
authors = [
    {name = "xdusongwei", email = "github@songwei.name"},
]
dependencies = [
    "concurrent-log-handler>=0.9.20",
    "json-log-formatter==0.5.1",
    "expiringdict>=1.2.1",
    "currency-symbols>=2.0.2",
    "Jinja2>=3.1.2",
    "base58>=2.1.1",
    "xxhash>=3.0.0",
    "humanize>=4.3.0",
    "psutil>=5.9.3",
    "orjson>=3.8.3",
    "exchange-calendars>=4.2.4",
    "tomlkit>=0.12.1",
    "python-telegram-bot[socks]>=21.1.1",
    "httpx>=0.28.1",
    "h2>=4.2.0",
]

requires-python = ">=3.13"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/xdusongwei/HODL"

[project.optional-dependencies]
test = [
    "coverage>=7.2.7",
    "pytest>=7.4.0",
]
tui = [
    "textual",
    "pywin32>=306; sys_platform == 'win32'",
    "win10toast>=0.9; sys_platform == 'win32'",
]

[tool]
[tool.pdm]
version = { source = "file", path = "hodl/__version__.py" }

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
bot = {cmd = "python -m hodl.cli.trade_bot"}
tui = {cmd = "python -m hodl.cli.tui"}
fixtools = {cmd = "python -m hodl.cli.fix_tools"}
demo = {cmd = "python -m hodl.cli.demo"}
test = {cmd = "coverage run --source=./hodl -m pytest --disable-pytest-warnings tests"}
html = {cmd = "coverage html"}
report = {cmd = "coverage report"}
xml = {cmd = "coverage xml"}
